Fixed PopUp z-index
Fixed PopUp z-index

--- a/css/style.css
+++ b/css/style.css
@@ -2214,7 +2214,7 @@ img, .drag-box, .player-element-container, .sub-element-container, .modal-player
   .popUP {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 10000;
     left: 0;
     top: 0;
     width: 100%;
